--- a/Domain.Core/Domain.Core.csproj
+++ b/Domain.Core/Domain.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Utilities.Core.Implementation\Utilities.Core.Implementation.csproj" />
+  </ItemGroup>
+
 </Project>
