chore: add context with initial migration

--- a/DistributedServices.Core/appsettings.json
+++ b/DistributedServices.Core/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=sqldata; Database=MasivianDb; User=sa; Password=Pass@word;"
+  }
 }
