chore: add roulette aplication with endpoint

--- a/DistributedServices.Core/DistributedServices.Core.csproj
+++ b/DistributedServices.Core/DistributedServices.Core.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Application.Core.Implementation\Application.Core.Implementation.csproj" />
     <ProjectReference Include="..\Infrastructure.Core\Infrastructure.Core.csproj" />
   </ItemGroup>
 
